# Aarohi

./: README.md
Algorithm1/: README.txt  algo1.sh
Code/: Makefile  Makefile.in  README.txt  compile.sh  config.status  configure  configure.ac
Code/TestFiles/: Test.txt  Test1.txt  Test12.txt  Test3_9_10_7.txt  Test5.txt  Test8.txt  Test84.txt  Test_size40.txt  Testcase.txt  single_phrase.txt
Code/autom4te.cache/: output.1  requests  traces.0  traces.1
Code/src/: Makefile  Makefile.am  Makefile.in  Makefile.plain  Makefile.unopt  aarohi.cc  driver.cc  driver.h  expression.h  exprtest.vcproj  lex.Phrase.cc  location.hh  output  parser.cc  parser.hh  parser.output  parser.tab.cc  parser.yy  position.hh  process.sh  rawinput.txt  scanner.h  scanner.ll  stack.hh
Experiments/: Graph08.txt  Graph09.txt  Graph10.txt  MultiFCBenignCheckTime.gnu  MultiFCCheckTime.eps  MultiFCOnlyCheckTime.gnu  README.txt  TestdataCheckTime.eps  compileropt.eps  cpuvstime.eps  cpuvstime.gnu  cpuvstimecompileropt.gnu  generate_graphs10_11.sh  generate_graphs8_9.sh  generate_plots.sh
Experiments/Graph08/: Test_Graph08_Size05.txt  Test_Graph08_Size10.txt  Test_Graph08_Size15.txt  Test_Graph08_Size18.txt  (+4 more)
FCToRule/: FCList.txt  README.txt  RuleList.txt
InterArrivalTimes/: InterArrivalTimesScatter.gnu  Interarrivalcumulativelogscale_orig.eps  NodeA.txt  NodeA_Times.txt  NodeB.txt  NodeB_Times.txt  Readme.txt  timediff.sh
SampleData/: Readme.txt
Speedup/: README.txt  table6_aarohi.sh
helperScripts/: Readme.txt  compute_mean_std_dev.sh  compute_meanstd_unopt.sh  spaceTounderscore.sh
(+11 files in other folders)
